- fix navigation container scrolling on small screens

--- a/src/assets/fabricator/styles/partials/_layout.scss
+++ b/src/assets/fabricator/styles/partials/_layout.scss
@@ -17,7 +17,7 @@ body {
 	.f-menu-active & {
 		width:100%;
 		height: 100%;
-		overflow: hidden;
+		// overflow: hidden;
 
 		@media (min-width: 60em) {
 			overflow: auto;
